--- a/template/style.scss
+++ b/template/style.scss
@@ -1,36 +1,34 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
 
 $white: #E0DDDC;
-$black : #252525;
+$black: #252525;
 $yellow: #F5A626;
 $brown: #231F20;
 
 body {
     background: $black;
-    margin: 0px;
+    margin: 0;
     position: relative;
     overflow: hidden;
-
     font-family: "Lexend", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
 
-    main{
+    main {
         background: $white;
-        border-radius: 20px 20px 0px 0px;
+        border-radius: 20px 20px 0 0;
         width: 97%;
         height: 97dvh;
         position: absolute;
         bottom: -100dvh;
         left: 50%;
         transform: translateX(-50%);
-
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: start;
 
-        .image-container{
+        .image-container {
             width: 80%;
             height: 70%;
             border-radius: 20px;
@@ -38,8 +36,8 @@ body {
             overflow: hidden;
             position: relative;
 
-            .background{
-                background: linear-gradient(90deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%);
+            .background {
+                background: linear-gradient(90deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
                 position: absolute;
                 left: 0;
                 top: 0;
@@ -48,23 +46,23 @@ body {
                 z-index: 2;
             }
 
-            .error{
+            .error {
                 position: absolute;
                 left: 30px;
-                top: 0px;
+                top: 0;
                 font-size: 32px;
                 color: $white;
                 z-index: 5;
             }
 
-            img{
+            img {
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
                 object-position: top;
             }
 
-            .text{
+            .text {
                 position: absolute;
                 left: 50%;
                 transform: translateX(-50%);
@@ -75,28 +73,25 @@ body {
                 text-align: center;
                 z-index: 3;
 
-                h1{
+                h1, h2 {
                     color: $white;
                     font-weight: bold;
                     font-size: 40px;
-                    margin: 0px;
+                    margin: 0;
                 }
 
-                h2{
+                h2 {
                     color: $yellow;
-                    font-size: 40px;
-                    font-weight: bold;
-                    margin: 0px;
                 }
             }
         }
 
-        .dog-info{
+        .dog-info {
             color: $brown;
             font-size: 20px;
         }
 
-        .form-wrapper{
+        .form-wrapper {
             text-align: center;
             height: fit-content;
             margin-top: 10px;
@@ -105,18 +100,18 @@ body {
             border-radius: 10px;
             transition: all .5s ease;
 
-            .arrow{
+            .arrow {
                 opacity: 0;
                 position: fixed;
                 left: 35%;
                 bottom: 130px;
                 z-index: 20;
                 transform: translateX(-50%);
-                clip-path: ellipse(0px 0px at 10% 20%);
+                clip-path: ellipse(0 0 at 10% 20%);
                 transition: opacity .5s ease, clip-path 1s ease;
             }
 
-            .toggle-form{
+            .toggle-form {
                 cursor: pointer;
                 background: $brown;
                 color: $white;
@@ -125,32 +120,88 @@ body {
                 padding: 15px;
                 transition: all .3s ease;
                 border: 1px solid $brown;
-
                 display: flex;
                 flex-direction: column;
 
-                transition: all .3s ease;
-
-                &:hover{
+                &:hover {
                     background: $white;
                     color: $brown;
                     border: 1px solid $yellow;
                 }
-
             }
 
-            &.open{
+            .form-container {
+                width: 100%;
+                display: none;
+                position: relative;
+    
+                form {
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 5px;
+                    text-align: start;
+                    position: relative;
+    
+                    label {
+                        color: $white;
+                        font-size: 16px;
+                        font-weight: bold;
+                        flex-shrink: 0;
+                        white-space: nowrap;
+                    }
+    
+                    .input-wrapper {
+                        display: flex;
+                        align-items: center;
+                        gap: 10px;
+                        height: 50px;
+    
+                        input {
+                            all: unset;
+                            background: $white;
+                            padding: 10px;
+                            border-radius: 10px 0 0 10px;
+                            width: 100%;
+                            height: 100%;
+                            box-sizing: border-box;
+                        }
+    
+                        button {
+                            all: unset;
+                            background: $yellow;
+                            color: $brown;
+                            cursor: pointer;
+                            width: 125px;
+                            font-weight: bold;
+                            height: 100%;
+                            border-radius: 0 10px 10px 0;
+                            display: block;
+                            text-align: center;
+                            transition: all 0.3s ease;
+                            border: 1px solid $yellow;
+    
+                            &:hover {
+                                background: $brown;
+                                color: $yellow;
+                            }
+                        }
+                    }
+                }
+            }
+
+            &.open {
                 width: 400px;
                 opacity: 1;
                 padding: 15px;
                 background: $brown;
 
-                .arrow{
+                .arrow {
                     opacity: 1;
                     clip-path: ellipse(160px 140px at 10% 20%);
                 }
-                
-                .toggle-form{
+
+                .toggle-form {
                     position: absolute;
                     top: 2.5px;
                     right: 2.5px;
@@ -160,81 +211,19 @@ body {
                     width: 25px;
                 }
 
-                .form-container{
+                .form-container {
                     opacity: 1;
                     display: flex;
-
                 }
             }
         }
 
-        .form-container{
-            width: 100%;
-            display: none;
-            position: relative;
-            
-            form{
-                width: 100%;
-                display: flex;
-                flex-direction: column;
-                gap: 5px;
-                text-align: start;
-                position: relative;
-
-                label{
-                    color: $white;
-                    font-size: 16px;
-                    font-weight: bold;
-                    flex-shrink: 0;
-                    white-space: nowrap;
-                }
-
-                .input-wrapper{
-                    display: flex;
-                    align-items: center;
-                    gap: 10px;
-                    height: 50px;
-
-                    input{
-                        all: unset;
-                        background: $white;
-                        padding: 10px;
-                        border-radius: 10px 0px 0px 10px;
-                        width: 100%;
-                        height: 100%;
-                        box-sizing: border-box;
-                    }
-
-                    button{
-                        all: unset;
-                        background: $yellow;
-                        color: $brown;
-                        cursor: pointer;
-                        width: 125px;
-                        font-weight: bold;
-                        height: 100%;
-                        border-radius: 0px 10px 10px 0px;
-                        display: block;
-                        text-align: center;
-                        transition: all 0.3s ease;
-                        border: 1px solid $yellow;
-
-                        &:hover{
-                            background: $brown;
-                            color: $yellow;
-                        }
-                    }
-                }
-            }
-            
-        }
-
-        .success-message{
+        .success-message {
             position: absolute;
             bottom: 0;
             left: 0;
             width: 100%;
-            height: 0px;
+            height: 0;
             background: $yellow;
             color: $brown;
             font-size: 20px;
@@ -244,11 +233,9 @@ body {
             display: flex;
             align-items: center;
             justify-content: center;
-
-            animation: grow .5s ease forwards;
+            animation: grow 0.5s ease forwards;
         }
     }
-
 }
 
 @keyframes grow {
